--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <canvas id="game"></canvas>
-  <script type="module" src="/src/main.js"></script>
+  <script type="module" src="/src/main.ts"></script>
 </body>
 
 </html>
